--- a/app/index.html
+++ b/app/index.html
@@ -194,13 +194,21 @@
                         <div class="text">
                             <h2>Informações Gerais</h2>
                             <div>
-                                <p><b>Taxa de entrada no país:</b> US$ 10 por pessoa (levar nota trocada para pagar na hora).</p>
                                 <p><b>Traslados Aeroporto/hotel/Aeroporto:</b> US$ 20 por pessoa (levar nota trocada para pagar na hora).</p>
                                 
-                                <b>Hospedagem - 4 noites de hospedagem tudo incluído:</b>
+                                <b>Hospedagem por 4 noites com Tudo Incluído (café, almoço, jantar e bebidas durante todos os dias):</b>
                                 <p>US$ 608,00 por adulto em apartamento duplo (2 adultos no mesmo quarto, cada uma paga esse valor).<br />
-                                US$ 204,00 por criança (04 a 17 anos) dividindo o apartamento com 2 adultos.<br />
+                                US$ 612,00 por adulto em apartamento triplo (3 adultos no mesmo quarto, cada uma paga esse valor).<br />
+                                US$ 612,00 por adulto em apartamento triplo (3 adultos no mesmo quarto, cada uma paga esse valor).<br />
+                                US$ 614,00 por adulto em apartamento quádruplo (4 adultos no mesmo quarto, cada uma paga esse valor).<br />
+                                US$ 1.044,00 por adulto em apartamento individual.<br />
+                                US$ 204,00 por criança/adolescente (04 a 17 anos) dividindo o apartamento com 2 adultos ou 3 adultos. (ocupação máximo de 4 pessoas, ou seja, 2 adultos + 2 crianças ou 3 adultos + 1 criança).<br />
                                 Crianças de 0 a 3 anos, não pagam.<br />
+                                <br />
+                                <b> Valor da noite extra (caso queira ficar mais que 4 noites):</b><br />
+                                US$ 261,00 por adulto e por noite em apartamento individual.<br />
+                                US$ 155,00 por adulto e por noite (dividindo com 1, 2 ou 3 pessoas).<br />
+                                US$ 51,00 por criança/adolescente  e por noite (04 a 17 anos). <br />
                                 </p>
                                 
                                 <b>Como é feito o pagamento?</b>
@@ -212,7 +220,6 @@
 
                                 Ou seja, os gastos são:
                                 - Passagens
-                                - Entrada no país
                                 - Hospedagem
                                 - Traslados
                                 - Seguro Viagem (se precisarem de ajuda para comprar, nos avise também)
