--- a/app/index.html
+++ b/app/index.html
@@ -69,7 +69,7 @@
                                     <a href="#eventos">Eventos</a>
                                 </li>
                                 <li>
-                                    <a href="#confirme">Confirme sua presença</a>
+                                    <a href="#confirme">Confirmação</a>
                                 </li>
                             </ul>
                         </div>
@@ -346,15 +346,15 @@
             <div class="row">
                 <div class="col-md-10 col-md-offset-1 col-xs-12 text-center">
                     <div class="title-block">
-                        <h1>Confirme
+                        <h1>A
                             <span>
-                                <em>sua Presença</em>
+                                <em>Confirmação</em>
                             </span>
                         </h1>
                         <div class="divider"></div>
                         <p>
-                            <em>Confirmando a sua presença <u><b>até dia 30 de novembro</b></u>, consideramos que está de acordo com os valores acima.
-                                Após a confirmação entraremos em contato para maiores detalhes.
+                            <em>Origado por confirmar a presença, agora estamos trabalhando pra tornar a viagem de todos e o nosso casamento, 
+                                um momento muito especial!
                             </em>
                         </p>
                     </div>
@@ -362,7 +362,7 @@
                 </div>
                 <div class="col-md-8 col-md-offset-2 col-xs-12 text-center">
 
-                    <form id="cadastrarForm" method="post" class="cadastrarForm">
+                    <!--form id="cadastrarForm" method="post" class="cadastrarForm">
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="form-group">
@@ -387,8 +387,7 @@
                         </div>
                         <div class="row">
                             <div class="col-md-12">
-                                <div class="form-group">
-                                    <!--textarea rows="5" class="form-control" name="message" placeholder="Write your message...​" required=""></textarea-->
+                                <div class="form-group">s
                                     <span class="bold">Quantidade de pessoas</span>
                                     <select class="form-control selectCenter"  name="qtde" required="">
                                         <option>1</option>
@@ -407,7 +406,7 @@
 
                         <button class="btn btn-primary btn-lg cadastrarSubmit" type="submit" id="cadastrarSubmit">Eu vou!</button>
                         <div class="responseForm"></div>
-                    </form>
+                    </form -->
                 </div>
             </div>
         </div>
